--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a5feed5",
+   "id": "82138c49",
    "metadata": {},
    "source": [
     "### Python String Function and Methods"
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3d19dd",
+   "id": "9aa49ddc",
    "metadata": {},
    "source": [
     "## Tabular Data and Data Formats"
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a89c338",
+   "id": "50a5aa4b",
    "metadata": {},
    "source": [
     "### A Pandas Series"
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7674cfe3",
+   "id": "d9d91144",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "11fe319b",
+   "id": "aaca97ca",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "82d22af1",
+   "id": "682c90df",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "53013442",
+   "id": "835be66b",
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe8f2b5",
+   "id": "6c21889d",
    "metadata": {},
    "source": [
     "### A Pandas DataFrame"
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1d9a48b0",
+   "id": "61a4f903",
    "metadata": {},
    "outputs": [
     {
@@ -1572,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "93e8fd0a",
+   "id": "5fb49ccb",
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "51aae1a2",
+   "id": "53ed8477",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3cd0a178",
+   "id": "790bbea4",
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cbbd4d3",
+   "id": "1dec0779",
    "metadata": {},
    "source": [
     "### Python lambdas and the Numpy Library"
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bb313022",
+   "id": "15717bbb",
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d0e693d9",
+   "id": "95523a12",
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9d031bec",
+   "id": "26ca2140",
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cfce4546",
+   "id": "b0a14887",
    "metadata": {},
    "outputs": [
     {
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1beadc93",
+   "id": "a574a4d7",
    "metadata": {},
    "source": [
     "## Running Basic Inferential Analyses"
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "96023608",
+   "id": "a71e03da",
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e1863848",
+   "id": "1f048273",
    "metadata": {},
    "outputs": [
     {
@@ -1901,8 +1901,242 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "d2d2cd6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age        9.740574\n",
+      "Height    18.977090\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kn/7zp94d956m90kx6s3b45f1lm0000gn/T/ipykernel_10880/2305945553.py:8: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  print(df.std())\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "d = {\n",
+    "    'Name':pd.Series(['Ahmed','Omar','Ali','Salwa','Majid','Othman','Gameel','Zaid','Ahlam','Zahrah','Ayman','Alaa']),\n",
+    "    'Age':pd.Series([34,26,25,27,30,54,23,43,40,30,28,46]),\n",
+    "    'Height':pd.Series([114.23,173.24,153.98,172,153.2,164.6,183.8,163.78,172,164.8])\n",
+    "}\n",
+    "df = pd.DataFrame(d)\n",
+    "print(df.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "cc6d78dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>10.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>33.833333</td>\n",
+       "      <td>161.56300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.740574</td>\n",
+       "      <td>18.97709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>114.23000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>26.750000</td>\n",
+       "      <td>156.43000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>164.70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>40.750000</td>\n",
+       "      <td>172.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>183.80000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Age     Height\n",
+       "count  12.000000   10.00000\n",
+       "mean   33.833333  161.56300\n",
+       "std     9.740574   18.97709\n",
+       "min    23.000000  114.23000\n",
+       "25%    26.750000  156.43000\n",
+       "50%    30.000000  164.70000\n",
+       "75%    40.750000  172.00000\n",
+       "max    54.000000  183.80000"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aee23fd9",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "397916fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number4\n",
+      "Enter a number2\n",
+      "------ Addition ------\n",
+      "6\n",
+      "------ Substraction ------\n",
+      "2\n",
+      "------ Multiplication ------\n",
+      "8\n",
+      "------ Division ------\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('Enter a number: '))\n",
+    "b = int(input('Enter a number: '))\n",
+    "print(\"------ Addition ------\")\n",
+    "print(a+b)\n",
+    "print(\"------ Substraction ------\")\n",
+    "print(a-b)\n",
+    "print(\"------ Multiplication ------\")\n",
+    "print(a*b)\n",
+    "print(\"------ Division ------\")\n",
+    "print(a/b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c90659aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number10\n",
+      "Enter a number9\n",
+      "Enter a number7\n",
+      "The result is 30.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input(\"Enter a number\"))\n",
+    "b = float(input(\"Enter a number\"))\n",
+    "c = float(input(\"Enter a number\"))\n",
+    "s = (a+b+c) / 2\n",
+    "result = (s*(s-a)*(s-b)*(s-c))**0.5\n",
+    "print(\"The result is %0.2f\" %result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3cd8abc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a value10\n",
+      "Enter a value100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[89, 95, 64]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a = int(input(\"Enter a value\"))\n",
+    "b = int(input(\"Enter a value\"))\n",
+    "random.sample(range(a,b),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "776c25ca",
+   "id": "87ce1c49",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1910,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "560ab468",
+   "id": "6a34739f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1918,15 +2152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcd1e6f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d21b2b1",
+   "id": "359a2774",
    "metadata": {},
    "outputs": [],
    "source": []
